SERVER-131307 Bind resolved namespaces recursively for mongot pipelines on views (#58557)

GitOrigin-RevId: a62adc2dc366639d7d70ed4d5531cc9a338b8749