src/mongo/db/views/pipeline_resolver.cpp
@@ -266,6 +266,10 @@ PipelineResolver::MongosViewRequestResult PipelineResolver::buildResolvedMongosV
         // first stage handles view resolution itself, but subsequent extension stages still need
         // view validation. Timeseries views are skipped; their pipeline is fully resolved above via
         // buildResolvedPipelineForSimpleCase.
+        // TODO SERVER-115069: this binds the view to top-level stages only. Not user-visible
+        // today — mongot sub-pipelines on views resolve shard-side via the sharded view kickback,
+        // where the recursive mongod path runs. Fold into the recursive resolver with the
+        // bindResolvedNamespace() migration.
         if (!resolvedView->isTimeseries()) {
             LiteParserOptions options{.ifrContext = ifrContext};
             auto lpp = LiteParsedPipeline(request, true, options);
